--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ body {
   overflow-y: scroll;
 }
 
+.navbar-static-top {
+  position: sticky;
+}
+
 .subheader {
   opacity: 0;
   transition: opacity 0.2s;
